# LiteShip

./: .editorconfig  .gitattributes  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  QA-AUDIT.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  czap.code-workspace  czap.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.scripts.json  tsconfig.tests.json  typedoc.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts  vitest.shared.ts
.claude/: settings.local.json
.github/: dependabot.yml
crates/czap-compute/: Cargo.toml
crates/czap-compute/src/: blend.rs  boundary.rs  lib.rs  spring.rs
docs/: ARCHITECTURE.md  ASTRO-RUNTIME-MODEL.md  ASTRO-STATIC-MENTAL-MODEL.md  AUDIT.md  AUTHORING-MODEL.md  CHANGELOG.md  DOCS.md  GETTING-STARTED.md  GLOSSARY.md  HISTORY_SCRUB.md  HOSTING.md  PACKAGE-SURFACES.md  RELEASING.md  ROADMAP.md  STATUS.md  TYPEDOC_README.md  capsule-factory.md
scripts/: artifact-builders.ts  artifact-context.ts  artifact-integrity.ts  artifact-types.ts  artifact-verifiers.ts  bench-format.ts  bench-gate.ts  bench-reality.ts  bench-trend.ts  capsule-compile.ts  capsule-verify.ts  check-invariants.ts  clean.ts  devx-check.ts  docs-check.ts  doctor.ts  extract-changelog-section.ts  feedback-verify.ts  flex-verify.ts  gauntlet.ts  glossary.ts  link-pre-commit.ts  merge-coverage.ts  merge-subprocess-v8.ts  package-smoke.ts  paired-truth.ts  postinstall.ts  pre-commit.sh  report-runtime-seams.ts  report-satellite-scan.ts  runtime-gate.ts  (+24 more)
(+1113 files in other folders)
